// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keys should not return an error for unknown properties if allowUnknown = true 1`] = `
Object {
  "errors": Array [],
  "value": Object {
    "ab": 10,
    "foo": "123",
  },
}
`;

exports[`keys should return an error 1`] = `
Object {
  "errors": Array [
    Object {
      "error": "must be a string",
      "path": "foo",
    },
  ],
  "value": Object {
    "foo": 123,
  },
}
`;

exports[`keys should return an error for unknown properties 1`] = `
Object {
  "errors": Array [
    Object {
      "error": "unknown property: ab",
      "path": "value",
    },
  ],
  "value": Object {
    "ab": 10,
    "foo": "123",
  },
}
`;

exports[`keys should return two errors 1`] = `
Object {
  "errors": Array [
    Object {
      "error": "must be a string",
      "path": "foo",
    },
    Object {
      "error": "must be a string",
      "path": "bar",
    },
  ],
  "value": Object {
    "bar": 456,
    "foo": 123,
  },
}
`;

exports[`keys should strip unknown properties if stripUnknown = true 1`] = `
Object {
  "errors": Array [],
  "value": Object {
    "foo": "123",
  },
}
`;
